--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <!-- Permission for internet -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission
+        android:name="android.permission.SEND_SMS"
+        tools:ignore="PermissionImpliesUnsupportedChromeOsHardware" />
 
     <application
         android:allowBackup="true"
@@ -12,25 +18,28 @@
         android:theme="@style/Base.Theme.SkillBridge"
         tools:targetApi="31">
         <activity
+            android:name=".EditProfile"
+            android:exported="false" />
+        <activity
             android:name=".HelpUsActivity"
             android:exported="false"
             android:label="Help Us"
-            android:theme="@style/Theme.SkillBridge"/>
+            android:theme="@style/Theme.SkillBridge" />
         <activity
             android:name=".AboutUsActivity"
             android:exported="false"
             android:label="About Us"
-            android:theme="@style/Theme.SkillBridge"/>
+            android:theme="@style/Theme.SkillBridge" />
         <activity
             android:name=".ContactUsActivity"
             android:exported="false"
             android:label="Contact Us"
-            android:theme="@style/Theme.SkillBridge"/>
+            android:theme="@style/Theme.SkillBridge" />
         <activity
             android:name=".HomeActivity"
             android:exported="false"
             android:label="SkillBridge"
-            android:theme="@style/Theme.SkillBridge"/>
+            android:theme="@style/Theme.SkillBridge" />
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
@@ -47,4 +56,5 @@
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
